# Effekseer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE_RUNTIME_DIRECTX  LICENSE_RUNTIME_VULKAN  LICENSE_TOOL  README.md  VisualStudio_Library.bat  azure-pipelines.yml  build.py  doxygen.template  readme_runtime.txt  readme_sample.txt  readme_tool.txt  readme_tool_mac.txt  readme_tool_win.txt  readme_unity.txt  release.bat  release_cpp.bat  release_cpp.py  release_cpp.sh  release_cpp_doc.bat  release_dxlib.bat  release_guide.md  release_runtime.bat  release_runtime.sh  release_tool.bat  release_tool.py  release_tool.sh
Dev/Cpp/: CMakeLists.txt  ConvertFlatbuffers.py  CreateHeader.py  CreateShader.py  CreateShader_15.py  CreateShader_Common.py  CreateShader_Test.py  CreateShader_ToolRuntime.py  CreateShader_Viewer.py  EffekseerRendererDX11.sln  EffekseerRendererDX12.sln  EffekseerRendererDX9.sln  EffekseerRendererGL.sln  EffekseerSoundXAudio2.sln  Test.sln  Viewer.sln  build.bat  build.sh  clean.bat
Dev/Cpp/EditorCommon/: CMakeLists.txt
Dev/Cpp/Effekseer/: CMakeLists.txt  Effekseer.Internal.h  Effekseer.Modules.h  Effekseer.SIMD.h  Effekseer.h  Effekseer.vcxproj  Effekseer.vcxproj.filters
Dev/Cpp/EffekseerMaterial/: CMakeLists.txt  efkMat.Base.h  efkMat.CommandManager.cpp  efkMat.CommandManager.h  efkMat.Library.cpp  efkMat.Library.h  efkMat.Models.cpp  efkMat.Models.h  efkMat.Parameters.cpp  efkMat.Parameters.h  efkMat.StringContainer.cpp  efkMat.StringContainer.h  efkMat.TextExporter.cpp  efkMat.TextExporter.h  efkMat.Utils.cpp  efkMat.Utils.h  efkMat.Utils.mm
Dev/Cpp/EffekseerMaterialCompiler/: CMakeLists.txt
Dev/Cpp/EffekseerMaterialEditor/: CMakeLists.txt  Config.cpp  Config.h  effekseerMaterialEditor.cpp  efkMat.Editor.cpp  efkMat.Editor.h
Dev/Cpp/EffekseerRendererArea/: EffekseerRendererArea.vcxproj  EffekseerRendererArea.vcxproj.filters
Dev/Cpp/EffekseerRendererCommon/: CMakeLists.txt  EffekseerRenderer.CommonUtils.cpp  EffekseerRenderer.CommonUtils.h  EffekseerRenderer.DDSTextureLoader.cpp  EffekseerRenderer.DDSTextureLoader.h  EffekseerRenderer.DXTK.DDSTextureLoader.cpp  EffekseerRenderer.DXTK.DDSTextureLoader.h  EffekseerRenderer.DXTK.dds.h  EffekseerRenderer.IndexBufferBase.cpp  EffekseerRenderer.IndexBufferBase.h  EffekseerRendererFlags.h  (+33 more)
Dev/Editor/: .editorconfig  CMakeLists.txt  Effekseer.sln  build.bat  clean.bat
Examples/: .clang-format  CMakeLists.txt
Examples/Culling/: CMakeLists.txt  main.cpp
Examples/CustomAsyncLoader/: CMakeLists.txt  CustomAsyncLoader.cpp  CustomAsyncLoader.h  main.cpp
Examples/CustomBinary/: CMakeLists.txt  main.cpp
Examples/CustomLoader/: CMakeLists.txt  main.cpp
Examples/DirectX11/: CMakeLists.txt  DeviceDX11.cpp  DeviceDX11.h  main.cpp
Examples/DirectX12/: CMakeLists.txt  DeviceDX12.cpp  DeviceDX12.h  main.cpp
Examples/DirectX9/: CMakeLists.txt  DeviceDX9.cpp  DeviceDX9.h  main.cpp
Examples/Distortion/: CMakeLists.txt  main.cpp
Examples/GpuParticles/: CMakeLists.txt  main.cpp  main.mm
Examples/Metal/: CMakeLists.txt  DeviceMetal.h  DeviceMetal.mm  main.mm
Examples/Multithread/: CMakeLists.txt  main.cpp
Examples/NetworkClient/: CMakeLists.txt  main.cpp
Examples/NetworkServer/: CMakeLists.txt  main.cpp
Examples/OpenAL/: CMakeLists.txt  main.cpp
Examples/OpenGL/: CMakeLists.txt  DeviceGLFW.cpp  DeviceGLFW.h  main.cpp
Examples/Resources/: CullingSprite.efkefc  GpuParticles_emit_line.efkefc  GpuParticles_emit_mesh.efkefc  GpuParticles_emit_sphere.efkefc  GpuParticles_force_tornade.efkefc  GpuParticles_force_turbulence.efkefc  GpuParticles_force_vortex.efkefc  GpuParticles_mesh_simple.efkefc  GpuParticles_sprite_directional.efkefc  GpuParticles_sprite_gradient.efkefc  GpuParticles_sprite_mass.efkefc  GpuParticles_sprite_simple.efkefc  GpuParticles_temp.efkefc  GpuParticles_trails_simple.efkefc  Laser01.efkefc  Laser01_reload.efkefc  TriggerLaser.efkefc  b_square.efkproj  distortion.efk  g_square.efkproj  r_square.efkproj  square_b.efkefc  square_g.efkefc  square_r.efkefc  test_reload.efk
Examples/SortHandle/: CMakeLists.txt  main.cpp
Examples/Trigger/: CMakeLists.txt  main.cpp
Examples/Utils/: CMakeLists.txt  Input.cpp  Input.h  Window.cpp  Window.h  stb_image_utils.h
Examples/Vulkan/: CMakeLists.txt  DeviceVulkan.cpp  DeviceVulkan.h  Main.cpp  VulkanApp.h  app.h  main.cpp
Release/: CMakeLists.txt  LICENSE.txt  MIT-LICENSE.txt  build_macOS.sh  build_msvc.bat  build_msvc2017.bat  build_msvc2017_x64.bat  build_msvc2017_x86.bat  build_msvc2019.bat  build_msvc2019_x64.bat  build_msvc2019_x86.bat  build_msvc2022_x64.bat  build_msvc2022_x86.bat  build_vulkan_msvc2019.bat  build_vulkan_msvc2019_x64.bat  build_vulkan_msvc2019_x86.bat  build_vulkan_msvc2022_x64.bat  build_vulkan_msvc2022_x86.bat  doxygen.template.en  doxygen.template.ja
Release/Help_Runtime/: index.html
Release/Help_Tool/: index.html
Release/Help_Unity/: Doxyfile  base.css  index.html
Release/QuickTutorial_Tool/: help_en.html
Release/Runtime/: CMakeLists.txt  EffekseerRendererDX9.sln
Release/RuntimeSample/: Culling.sln  CusotmBinary.sln  DirectX11.sln  DirectX9.sln  Distortion.sln  DxLib.sln  Multithread.sln  NetworkClient.sln  NetworkServer.sln  OpenGL.sln  SortHandle.sln
Tool/: CMakeLists.txt  README.md  build.bat  build.sh  fbxToEffekseerModelConverter.sln
Tool/EffectRecorder/: EffectRecorder.sln
Tool/EffekseerLauncher/: CMakeLists.txt  build_linux.sh  build_macosx.sh  build_windows.bat  resources.aps
Tool/EffekseerResourceConverter/: CMakeLists.txt
Tool/fbxToEffekseerCurveConverter/: CMakeLists.txt  fbxToEffekseerCurveConverter.sln  fbxToEffekseerCurveConverter.vcxproj  fbxToEffekseerCurveConverter.vcxproj.filters
Tool/fbxToEffekseerModelConverter/: CMakeLists.txt  Utils.cpp  Utils.h  fbxToEffekseerModelConverter.vcxproj  fbxToEffekseerModelConverter.vcxproj.filters  fbxToEfkMdl.Base.h  fbxToEfkMdl.FBXConverter.cpp  fbxToEfkMdl.FBXConverter.h  fbxToMdl.VertexAnimation.cpp  fbxToMdl.VertexAnimation.h  main.cpp
Tool/mqoToEffekseerModelConverter/: mqoToEffekseerModelConverter.sln
(+4381 files in other folders)
